[package]
name = "menhue"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/madsmtm/menhue"
description = "Status bar interface for Phillips Hue lights"

[dependencies]
block2 = "0.5.1"
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["all"] }
objc2-app-kit = { version = "0.2.2", features = ["all"] }

[profile.dev]
# For possibly better system backtraces on macOS
panic = "abort"
