[package]
name = "menhue"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/madsmtm/menhue"
description = "Status bar interface for Phillips Hue lights"

[dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"

[profile.dev]
# For possibly better system backtraces on macOS
panic = "abort"
