[package]
name = "menhue"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/madsmtm/menhue"
description = "Status bar interface for Phillips Hue lights"

[dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "block2",
    "objc2-core-foundation",
    "NSArray",
    "NSDictionary",
    "NSEnumerator",
    "NSJSONSerialization",
    "NSOperation",
    "NSRunLoop",
    "NSString",
    "NSURL",
    "NSURLRequest",
    "NSURLResponse",
    "NSURLSession",
] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "objc2-core-foundation",
    "NSApplication",
    "NSButton",
    "NSControl",
    "NSImage",
    "NSLayoutAnchor",
    "NSLayoutConstraint",
    "NSLayoutGuide",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSRunningApplication",
    "NSSlider",
    "NSStackView",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSTextField",
    "NSUserInterfaceLayout",
    "NSView",
    "NSWindow",
] }

[profile.dev]
# For possibly better system backtraces on macOS
panic = "abort"

#
# NOTE: Remember to run the following when changing this:
#
# nix-shell -p crate2nix --run "crate2nix generate"
#
